--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
       <version>9.1-901.jdbc4</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.16.12</version>
+
+    </dependency>
 
     <dependency>
       <groupId>com.sun.jersey</groupId>
